# SW-TPM-File-Encryption

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: demo_steps.md  project_design.md  setup_ubuntu.md
report/: report.md
scripts/: demo.sh  demo_pcr.sh  install_ubuntu_dependencies.sh  setup.sh  setup_tpm.sh  start_swtpm.sh  start_tpm.sh  stop_tpm.sh
src/: cli.py  crypto.py  errors.py  main.py  metadata.py  policies.py  tpm.py
sw-tpm-file-encryption/: .gitignore  README.md  pyproject.toml  requirements.txt
sw-tpm-file-encryption/docs/: demo_steps.md  setup_ubuntu.md
sw-tpm-file-encryption/examples/: sample.txt
sw-tpm-file-encryption/scripts/: demo.sh  demo_pcr.sh  install_ubuntu_dependencies.sh  setup_tpm.sh  stop_swtpm.sh
sw-tpm-file-encryption/src/: __init__.py  crypto.py  errors.py  metadata.py  tpm.py
sw-tpm-file-encryption/tests/: test_cli_paths.py  test_metadata.py  test_policies.py
tests/: test_crypto.py  test_metadata.py
